--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,3 +1,4 @@
+/*
 
 // Body
 $body-bg: #f5f8fa;
@@ -35,3 +36,4 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+*/
