--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,8 +9,82 @@
 //@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // Foundation
+@import "node_modules/foundation-sites/scss/settings/_settings.scss";
 @import "node_modules/foundation-sites/assets/foundation";
 
 [v-cloak] {
   display: none;
+}
+
+.hero {
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+
+  .hero-image {
+    background-image: url('/images/desk-hero-small.jpg');
+    height: 100vh;
+    width: 100vw;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    margin: -5px -10px -10px -5px;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+
+    position: absolute;
+    z-index: -1;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: linear-gradient(to bottom right, #004250, #04004d);
+      opacity: .8;
+    }
+  }
+
+  .intro {
+    padding: 3rem;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  h1 {
+    color: #fff;
+    font-size: 2.5rem;
+    line-height: 1.0em;
+    letter-spacing: -0.025em;
+    font-weight: 300;
+    text-align: center;
+  }
+  p {
+    color: #fff;
+    line-height: 1.75em;
+    font-weight: 200;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  .face-image {
+    background: url('https://placeholdit.imgix.net/~text?txtsize=47&txt=500%C3%97500&w=500&h=500');
+    background-size: cover;
+    height: 9rem;
+    width: 9rem;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto;
+  }
 }
