--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -87,4 +87,22 @@
     display: block;
     margin: 0 auto;
   }
+
+  @include breakpoint(medium large xlarge) {
+    .face-image {
+      width: 18em;
+      height: 18em;
+      alignment: left;
+    }
+
+    h1 {
+      padding-top: 4.5rem;
+      text-align: right;
+      font-size: 2.5rem;
+    }
+
+    p {
+      text-align: right;
+    }
+  }
 }
