Create foundation overrides file for extra styling

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,7 @@
 // Foundation
 @import "node_modules/foundation-sites/scss/settings/_settings.scss";
 @import "node_modules/foundation-sites/assets/foundation";
+@import "foundation-overrides";
 
 // Component Styles
 @import "components/hero";
