--- a/resources/assets/sass/components/hero.scss
+++ b/resources/assets/sass/components/hero.scss
@@ -62,7 +62,7 @@
   }
 
   .face-image {
-    background: url('https://placeholdit.imgix.net/~text?txtsize=47&txt=500%C3%97500&w=500&h=500');
+    background: url('/images/me-cropped.jpg');
     background-size: cover;
     height: 9rem;
     width: 9rem;
