--- a/resources/assets/sass/components/hero.scss
+++ b/resources/assets/sass/components/hero.scss
@@ -58,7 +58,7 @@
     line-height: 1.75em;
     font-weight: 200;
     text-align: center;
-    margin-bottom: 2rem;
+    //margin-bottom: 2rem;
   }
 
   .face-image {
@@ -69,6 +69,14 @@
     border-radius: 50%;
     display: block;
     margin: 0 auto;
+  }
+
+  .hero-buttons {
+    position: relative;
+
+    .button-group a {
+      margin: 0.15rem auto;
+    }
   }
 
   @include breakpoint(medium large xlarge) {
@@ -86,6 +94,14 @@
 
     p {
       text-align: right;
+    }
+
+    .hero-buttons {
+      margin: 2rem auto;
+
+      .button-group a {
+        margin: 0 0.15rem;
+      }
     }
   }
 }
