Use Poirot One as the title font

--- a/resources/assets/sass/components/hero.scss
+++ b/resources/assets/sass/components/hero.scss
@@ -46,6 +46,7 @@
     transform: translateY(-50%);
   }
   h1 {
+    font-family: $title-font;
     padding-top: 1rem;
     color: #fff;
     font-size: 2rem;
