Change personal image to placecat
Richard keeps giggling and making fun of my picture whenever he walks
by. Change it to a cat so he shuts up until I'm ready to publish.

--- a/resources/assets/sass/components/hero.scss
+++ b/resources/assets/sass/components/hero.scss
@@ -63,7 +63,7 @@
   }
 
   .face-image {
-    background: url('/images/me-cropped.jpg');
+    background: url('/images/placecat.jpg');
     background-size: cover;
     height: 9rem;
     width: 9rem;
