Using my newfound experience, rebuild hero component

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,7 +14,7 @@
 @import "foundation-overrides";
 
 // Component Styles
-@import "components/hero";
+@import "components/hero-new";
 
 [v-cloak] {
   display: none;
