Add motto data into column (oops)

--- a/resources/assets/sass/components/hero-new.scss
+++ b/resources/assets/sass/components/hero-new.scss
@@ -42,7 +42,10 @@
   .motto {
     margin-left: 3rem;
     margin-right: 3rem;
-    padding-bottom: 2rem;
+
+    p {
+      margin-top: 1rem;
+    }
   }
 
   .user-image {
