Replace old hero with new

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,7 +15,7 @@
 @import "foundation-overrides";
 
 // Component Styles
-@import "components/hero-new";
+@import "components/hero";
 
 [v-cloak] {
   display: none;
