--- a/resources/assets/sass/components/hero.scss
+++ b/resources/assets/sass/components/hero.scss
@@ -36,9 +36,22 @@
   }
 
   .intro {
-    padding: 3rem;
+    padding-top: 2rem;
   }
 
+  .motto {
+    p {
+      margin-top: 1rem;
+    }
+  }
+
+  .user-image {
+    background: url('/images/placecat.jpg');
+    background-size: cover;
+    height: 9rem;
+    width: 9rem;
+    border-radius: 50%;
+  }
   h1 {
     font-family: $title-font;
     padding-top: 1rem;
@@ -50,52 +63,14 @@
   }
   p {
     color: #fff;
-    line-height: 1.75em;
+    line-height: 1.5em;
     font-weight: 200;
     text-align: center;
-    //margin-bottom: 2rem;
-  }
-
-  .face-image {
-    background: url('/images/placecat.jpg');
-    background-size: cover;
-    height: 9rem;
-    width: 9rem;
-    border-radius: 50%;
-    display: block;
-    margin: 0 auto;
   }
 
   .hero-buttons {
-    position: relative;
-
-    .button-group a {
-      margin: 0.15rem auto;
-    }
-  }
-
-  @include breakpoint(medium large xlarge) {
-    .intro {
-      margin-top: 5rem;
-    }
-    .face-image {
-      width: 18em;
-      height: 18em;
-      alignment: left;
-    }
-
-    h1 {
-      padding-top: 6.5rem;
-      text-align: right;
-      font-size: 2.5rem;
-    }
-
-    p {
-      text-align: right;
-    }
-
-    .hero-buttons {
-      top: 5rem;
+    a {
+      margin: 0.25rem auto;
     }
   }
 }
