--- a/resources/assets/sass/components/hero.scss
+++ b/resources/assets/sass/components/hero.scss
@@ -46,7 +46,7 @@
   }
 
   .user-image {
-    background: url('/images/placecat.jpg');
+    background: url('/images/me-cropped.jpg');
     background-size: cover;
     height: 9rem;
     width: 9rem;
@@ -62,6 +62,7 @@
     text-align: center;
   }
   p {
+    font-family: $body-font;
     color: #fff;
     line-height: 1.5em;
     font-weight: 200;
