--- a/resources/assets/sass/_foundation-overrides.scss
+++ b/resources/assets/sass/_foundation-overrides.scss
@@ -1,3 +1,12 @@
+$breakpoints: (
+        small: 0,
+        medium: 500px,
+        large: 1024px,
+        xlarge: 1200px,
+        xxlarge: 1440px,
+);
+
+
 button.radius, .button.radius {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
