Enlarge user image on large screens and up

--- a/resources/assets/sass/components/hero.scss
+++ b/resources/assets/sass/components/hero.scss
@@ -40,6 +40,8 @@
   }
 
   .motto {
+    padding: 0;
+
     p {
       margin-top: 1rem;
     }
@@ -77,17 +79,20 @@
     }
   }
 
-  @include breakpoint(small-only) {
-    .motto {
-      padding: 0;
-    }
-  }
-
   @include breakpoint(medium) {
     .table-centered {
       display: table-cell;
       vertical-align: middle;
       height: 100vh;
+    }
+  }
+
+  @include breakpoint(large) {
+    .user-image {
+      max-width: 18rem;
+      max-height: 18rem;
+      width: 18rem;
+      height: 18rem;
     }
   }
 }
