Globally set new fonts

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,6 +17,13 @@
 // Component Styles
 @import "components/hero";
 
+* {
+  font-family: $body-font;
+}
+h1 {
+  font-family: $title-font;
+}
+
 [v-cloak], .no-js {
   display: none;
 }
